--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-LOGDNA_HOSTNAME=
-LOGDNA_INGESTION_KEY=
-LOGDNA_REGION=
+LOG_ANALYSIS_HOSTNAME=
+LOG_ANALYSIS_INGESTION_KEY=
+LOG_ANALYSIS_REGION=
 COS_BUCKET_RECEIVER=
 COS_BUCKET_ARCHIVE=
 COS_APIKEY=
